--- a/css/base.css
+++ b/css/base.css
@@ -1,34 +1,43 @@
-/* CSS Grid and Utility System */
+/* CSS Grid and Utility System - Justin Poehnelt */
+
+/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
+/*html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}*/
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
-	width: 95%;
-	padding: 2px 8px;
-	margin: auto auto;
+    width: 95%;
+    padding: 2px 8px;
+    margin: auto auto;
 }
 
 /* grids */
 .row {
-	width: 100%;
-	display: block;
+    width: 100%;
+    display: block;
 }
 
 .container:after,
-.row:after {
-  content:"";
-  display:table;
-  clear:both;
+.row:after, .input-group:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.col-small-1, 
-.col-small-2, 
+.col-small-1,
+.col-small-2,
 .col-small-3,
-.col-small-4, 
-.col-small-5, 
+.col-small-4,
+.col-small-5,
 .col-small-6,
-.col-small-7, 
-.col-small-8, 
+.col-small-7,
+.col-small-8,
 .col-small-9,
-.col-small-10, 
-.col-small-11, 
+.col-small-10,
+.col-small-11,
 .col-small-12,
 .col-medium-1,
 .col-medium-2,
@@ -54,135 +63,254 @@
 .col-large-10,
 .col-large-11,
 .col-large-12 {
-	width: 98%;
-	display: inline;
-	float: left;
-	margin: 0 1%;
-	overflow: hidden;
+    width: 98% !important;
+    display: inline;
+    float: left;
+    margin: 0 1%;
+    overflow: hidden;
 
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box;         /* Opera/IE 8+ */
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
 
+}
+
+.button {
+    border: 1px solid #cccccc;
+    background-color: white;
+    border-radius: 4px;
+    -mox-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    cursor: pointer;
+
+}
+
+.button:hover {
+    background-color: #f1f1f1;
+}
+.button-primary {
+    background-color: #30a6ff;
+}
+
+/* Nav */
+nav {
+    background-color: black;
+    color: #f8f8f8;
+    padding: 5px 0;
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+}
+
+nav .title {
+    display: inline;
+    font-size: larger;
+    margin: 0 25px 0 0;
+}
+nav a {
+    text-decoration: none;
+    color: #f8f8f8;
+    margin: 0 15px 0 0;
+}
+nav a:hover {
+    color: #d8d8d8;
+}
+/* Forms */
+label {
+    font-weight: bolder;
+}
+.form-horizontal .input-group label {
+    text-align: right;
+}
+.input {
+    background: white;
+    border: 1px solid #cccccc;
+    box-shadow: 0 0 3px #cccccc;
+    -moz-box-shadow: 0 0 3px #cccccc;
+    -webkit-box-shadow: 0 0 3px #cccccc;
+    padding: 3px 6px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box;
+}
+.input-group {
+    display: block;
+}
+.input-large, .button-large {
+    padding: 3px 6px;
+    font-size: 120%;
+}
+
+.input-small, .button-small {
+    padding: 2px 4px;
+    font-size: 80%;
+}
+
+.form > .input-group > label, .form > .input-group > input, .form > .button {
+    display: block;
+    width: 98%;
+    margin: 5px 1%;
+}
+
+.form-horizontal > .input-group > label, .form-horizontal > .input-group > input, .form-horizontal > .button {
+    display: inline;
+    margin: 5px 1%;
 }
 
 /* Media Queries */
 /* phones and some small tablets */
 @media only screen and (min-width: 450px) {
-	.col-small-1 {
-		width: 6.333333%;
-	} 
-	.col-small-2 {
-		width: 14.666666%;
-	}
-	.col-small-3 {
-		width: 22.9999%;
-	} 
-	.col-small-4 {
-		width: 31.3333%;
-	}
-	.col-small-5 {
-		width: 39.6666%;
-	} 
-	.col-small-6 {
-		width: 47.9999%;
-	}
-	.col-small-7 {
-		width: 56.3333%;
-	} 
-	.col-small-8 {
-		width: 64.6666%;
-	}
-	.col-small-9 {
-		width: 72.9999%;
-	} 
-	.col-small-10 {
-		width: 81.3333%;
-	}
-	.col-small-11 {
-		width: 89.6666%;
-	} 
+     *[class|='col'] label {
+        text-align: left;
+    }
+    .col-small-1 {
+        width: 6.333333% !important;
+    }
+
+    .col-small-2 {
+        width: 14.666666% !important;
+    }
+
+    .col-small-3 {
+        width: 22.9999% !important;
+    }
+
+    .col-small-4 {
+        width: 31.3333% !important;
+    }
+
+    .col-small-5 {
+        width: 39.6666% !important;
+    }
+
+    .col-small-6 {
+        width: 47.9999% !important;
+    }
+
+    .col-small-7 {
+        width: 56.3333% !important;
+    }
+
+    .col-small-8 {
+        width: 64.6666% !important;
+    }
+
+    .col-small-9 {
+        width: 72.9999% !important;
+    }
+
+    .col-small-10 {
+        width: 81.3333% !important;
+    }
+
+    .col-small-11 {
+        width: 89.6666% !important;
+    }
 }
 
 /* some tablets */
 @media only screen and (min-width: 768px) {
-	.col-medium-1 {
-		width: 6.3333%;
-	} 
-	.col-medium-2 {
-		width: 14.6666%;
-	}
-	.col-medium-3 {
-		width: 22.9999%;
-	} 
-	.col-medium-4 {
-		width: 31.3333%;
-	}
-	.col-medium-5 {
-		width: 39.6666%;
-	} 
-	.col-medium-6 {
-		width: 47.9999%;
-	}
-	.col-medium-7 {
-		width: 56.3333%;
-	} 
-	.col-medium-8 {
-		width: 64.6666%;
-	}
-	.col-medium-9 {
-		width: 72.9999%;
-	} 
-	.col-medium-10 {
-		width: 81.3333%;
-	}
-	.col-medium-11 {
-		width: 89.6666%;
-	} 
+    .col-medium-1 {
+        width: 6.3333% !important;
+    }
+
+    .col-medium-2 {
+        width: 14.6666% !important;
+    }
+
+    .col-medium-3 {
+        width: 22.9999% !important;
+    }
+
+    .col-medium-4 {
+        width: 31.3333% !important;
+    }
+
+    .col-medium-5 {
+        width: 39.6666% !important;
+    }
+
+    .col-medium-6 {
+        width: 47.9999% !important;
+    }
+
+    .col-medium-7 {
+        width: 56.3333% !important;
+    }
+
+    .col-medium-8 {
+        width: 64.6666% !important;
+    }
+
+    .col-medium-9 {
+        width: 72.9999% !important;
+    }
+
+    .col-medium-10 {
+        width: 81.3333% !important;
+    }
+
+    .col-medium-11 {
+        width: 89.6666% !important;
+    }
 }
+
 /* desktops */
 @media only screen and (min-width: 970px) {
-	.col-large-1 {
-		width: 6.3333%;
-	} 
-	.col-large-2 {
-		width: 14.6666%;
-	}
-	.col-large-3 {
-		width: 22.9999%;
-	} 
-	.col-large-4 {
-		width: 31.3333%;
-	}
-	.col-large-5 {
-		width: 39.6666%;
-	} 
-	.col-large-6 {
-		width: 47.9999%;
-	}
-	.col-large-7 {
-		width: 56.3333%;
-	} 
-	.col-large-8 {
-		width: 64.6666%;
-	}
-	.col-large-9 {
-		width: 72.9999%;
-	} 
-	.col-large-10 {
-		width: 81.3333%;
-	}
-	.col-large-11 {
-		width: 89.6666%;
-	} 
+    .col-large-1 {
+        width: 6.3333% !important;
+    }
+
+    .col-large-2 {
+        width: 14.6666% !important;
+    }
+
+    .col-large-3 {
+        width: 22.9999% !important;
+    }
+
+    .col-large-4 {
+        width: 31.3333% !important;
+    }
+
+    .col-large-5 {
+        width: 39.6666% !important;
+    }
+
+    .col-large-6 {
+        width: 47.9999% !important;
+    }
+
+    .col-large-7 {
+        width: 56.3333% !important;
+    }
+
+    .col-large-8 {
+        width: 64.6666% !important;
+    }
+
+    .col-large-9 {
+        width: 72.9999% !important;
+    }
+
+    .col-large-10 {
+        width: 81.3333% !important;
+    }
+
+    .col-large-11 {
+        width: 89.6666% !important;
+    }
 }
+
 /* overrides */
-hr { 
-	background-color: #cccccc;
-	height: 1px; border: 0;
+hr {
+    background-color: #cccccc;
+    height: 1px;
+    border: 0;
 }
+
 /* utility class */
-small { 
-	font-size: 75%;
-	font-weight: lighter;
-	}
+small {
+    font-size: 75%;
+    font-weight: lighter;
+}
