minor changes to css

--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,9 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
+
 
 .container {
     width: 95%;
@@ -115,6 +117,37 @@ nav a {
 nav a:hover {
     color: #d8d8d8;
 }
+
+/* Sidebar */
+.sidebar {
+    background-color: #dddddd;
+    margin: 0 10px 0 0;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -mox-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.sidebar ul li {
+    margin:0;
+    padding: 5px;
+    border-bottom: 1px solid #cccccc;
+}
+
+.sidebar ul li a {
+    color: black;
+}
+
+.sidebar ul li:last-child {
+    margin: 0;
+    border-bottom: none;
+}
+
 /* Forms */
 label {
     font-weight: bolder;
@@ -313,4 +346,9 @@ hr {
 small {
     font-size: 75%;
     font-weight: lighter;
+}
+
+.right {
+    text-align: right;
+    float: right;
 }
